# coursework-2

./: .env.example  .gitignore  README.md  docker-compose.yml  test_output.txt  testing_chapter.txt
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  models.py  schema.sql  security.py
backend/app/features/: ownership.py
backend/app/features/auth/: router.py
backend/app/features/experiments/: router.py
backend/app/features/files/: router.py
backend/app/features/reports/: router.py
backend/app/features/runs/: router.py
backend/app/features/series/: router.py
backend/app/features/users/: router.py
backend/app/storage/: s3.py
backend/scripts/: capture_auth.py  capture_experiments.py  capture_files.py  capture_runs.py  capture_series.py  capture_worker.py  seed.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_experiments.py  test_files.py  test_runs.py  test_series_points.py  test_worker.py
backend/worker/: main.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: index.html  style.css
frontend/js/: api.js  app.js
system_design/: README.md  relational.mmd  relational_not_norm.mmd
